# popcorn-id

./: .gitignore  .pdm-python  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
docker/api/: Dockerfile
scripts/: run.sh
src/: __init__.py  config.py  main.py
src/api/: __init__.py  movie.py
src/data/: movie_data.json
src/infrastructure/db/: core.py
src/models/: movie.py
tests/: test_add_movie.py  test_get_movie.py  test_get_movie_latest.py
