[project]
name = "popcorn-id"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "alamsyah10q", email = "alamsyah.imanudin@quanmatic.com"},
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.6.15",
    "click==8.2.1",
    "colorama==0.4.6",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "Pygments==2.19.1",
    "pytest==8.4.1",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-inspection==0.4.1",
    "typing-extensions==4.14.0",
    "uvicorn==0.34.3",
    "sqlalchemy>=2.0.42",
    "alembic>=1.16.4",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
version = { source = "file", path = "src/__init__.py" }
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "ruff>=0.1.7",
    "pyright>=1.1.339",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.4",
]

[tool.pdm.scripts]
pyright = "pyright ./src"
pyright_test = "pyright ./tests"
ruff_lint = "ruff check ./src"
ruff_lint_test = "ruff check ./tests"
ruff_format = "ruff format ./src"
ruff_format_test = "ruff format ./tests"
test = "pytest ./tests"
format = { composite = ["ruff_format", "ruff_format_test"] }
lint = { composite = [
    "ruff_lint",
    "ruff_lint_test",
    "pyright",
    "pyright_test",
] }
check = { composite = ["format", "lint", "test"] }

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]
addopts = "--cov=src"

[tool.coverage.run]
omit = ["*/__init__.py", "src/main.py", "src/domain/repository/*"]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "Q",  # flake8-quotes
    "UP", # pyupgrade
    "W",  # pycodestyle
]
lint.ignore = ["E501"]
target-version = "py311"
src = ["src"]
exclude = ["./migrations/versions/*"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["src", "tests"]
